tests/rosetta/out/Pascal/call-an-object-method.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:34Z
program CallAnObjectMethod;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;
type Box = record
  Contents: string;
  secret: integer;
end;

function New(): Box;
var
  _tmp0: Box;
  b: Variant;
begin
  _tmp0.Contents := 'rabbit';
  _tmp0.secret := 1;
  b := _tmp0;
  result := b;
  exit;
end;

var
  box_: Box;

begin
  box_ := New();
  box_.TellSecret();
end.
